--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 12px;
 }
 
 .App-link {
@@ -35,4 +36,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+}
+.connect__container{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  font-size: 16px;
+}
+
+.gallery{
+  display: flex;
+  flex-direction: row;
+}
+.gallery__item{
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  width: 400px;
+  height: 530px;
+  border: #ccc 2px solid;
+  border-radius: 8px;
+  flex-direction: column;
+  padding: 20px 0px;
+  margin: 0px 10px;
+}
+.gallery__item_title {
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
 }
